tests/ui/suggestions/call-on-unimplemented-ctor.stderr
error[E0277]: the trait bound `fn(u32) -> Time {Time}: Resource` is not satisfied
  --> $DIR/call-on-unimplemented-ctor.rs:3:21
   |
LL |     insert_resource(Time);
   |     --------------- ^^^^ the trait `Resource` is not implemented for fn item `fn(u32) -> Time {Time}`
   |     |
   |     required by a bound introduced by this call
   |
note: required by a bound in `insert_resource`
  --> $DIR/call-on-unimplemented-ctor.rs:10:23
   |
LL | fn insert_resource<R: Resource>(resource: R) {}
   |                       ^^^^^^^^ required by this bound in `insert_resource`
help: use parentheses to construct this tuple struct
   |
LL |     insert_resource(Time(/* u32 */));
   |                         +++++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
